fixed header spacing

--- a/css/index.css
+++ b/css/index.css
@@ -521,8 +521,10 @@ header img {
   border-radius: 15px;
 }
 header {
-  height: 15rem;
+  height: 22rem;
   width: 100%;
+  margin-bottom: 2rem;
+  padding-top: 7rem;
   display: flex;
   flex-direction: column;
   flex-wrap: null;
