--- a/less/header.less
+++ b/less/header.less
@@ -1,9 +1,8 @@
 header {
-  height: 15rem;
+  height: 22rem;
   width: 100%;
-  //background: url("../images/art-balloons-birthday.jpg");
-  //background: url("../images/blurred-blurry-hd-wallpaper.jpg");
-//  background-size: cover;
+  margin-bottom: 2rem;
+  padding-top: 7rem;
   .flexy(flex, column, null, center, center);
 
 }
